--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -17,7 +17,7 @@
       <div class="col col-center">
         <div class="col text-center">
           <p><em>Start using my service right now.</em></p>
-          <button class="button button-positive button-large" ng-click="getQuote()">Get Started</button>
+          <button class="button button-positive button-outline" ng-click="getQuote()">Start Now</button>
         </div>
       </div>
     </div>
