--- a/www/templates/client/dashboard.html
+++ b/www/templates/client/dashboard.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Dashboard">
   <ion-nav-buttons side="right">
-    <button class="button button-clear button-small button-positive button-icon ion-log-out" ng-click="authObj.$signOut()"></button>
+    <button class="button button-clear button-small button-white button-icon ion-more" ng-click="popover.show($event)"></button>
   </ion-nav-buttons>
   <ion-content class="client-dashboard">
     <div class="profile-box text-center">
