--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -41,7 +41,7 @@
       </ion-list>
     </ion-content>
     <ion-footer-bar class="bar-dark">
-      <button class="button button-block button-outline button-positive get-quote" menu-close ng-hide="isLoggedIn" ng-click="login()">Log in</button>
+      <button class="button button-block button-outline button-positive get-quote" menu-close ng-hide="isLoggedIn" ng-click="getQuote()">Get a Quote</button>
       <button class="button button-block button-outline button-positive get-quote" ui-sref="app.client.dashboard" menu-close ng-show="isLoggedIn">Dashboard</button>
     </ion-footer-bar>
   </ion-side-menu>
